chore(build) add automated build with travis
This adds an automated build with Travis-CI
in our first step, we add our markdownrc and lint markdown
we also `mix test` our elixir project

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "markdownlint-cli": "^0.3.1"
   },
   "scripts": {
-    "mdlint": "find *.md apps/ -name '*.md' | xargs  -t markdownlint"
+    "mdlint": "markdownlint *.md apps/*/*.md"
   },
   "dependencies": {
     "grunt": "^1.0.1",
