fix(build): make sure we have hex & rebar
- hex is needed to build elixir deps
- rebar is needed to build erlang deps

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ cache:
 before_script:
   - yarn
   - mix deps.get
+  - mix local.hex --force
+  - mix local.rebar --force
 
 script:
   - yarn run mdlint
