--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,8 @@ jobs:
       # specify any bash command here prefixed with `run: `
       - run: npm i
       - run: npm run mdlint
+      - run: mix local.hex --force
+      - run: mix local.rebar --force
       - run: mix deps.get
       - run: mix ecto.create
       - run: mix test
