--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,11 +7,11 @@ jobs:
     docker:
       # specify the version here
       - image: circleci/elixir:1.5-node
-      
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
+      - image: circleci/postgres:10-alpine
+        environment:
+          POSTGRES_USER: sealas
+          POSTGRES_DB: sealas
+          POSTGRES_PASSWORD: "sealas"
 
     working_directory: ~/repo
     steps:
