chore(test): also make travis use a postgresql db
travisci also provides a service that can be consumed;
The database there is a bit trickier to "configure".

Note that we're removing the unused mariadb dependency!

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: elixir
 elixir: '1.5'
 otp_release: '20.0'
+services:
+  - postgresql
 node_js:
-- '6'
+  - '6'
 
 cache:
   - yarn
 before_script:
+  - psql -c "create role sealas password 'sealas';" -U postgres
+  - psql -c 'create database sealas;' -U postgres
   - yarn
   - mix deps.get
   - mix local.hex --force
