--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ node_js:
 cache:
   - yarn
 before_script:
-  - psql -c "create role sealas password 'sealas';" -U postgres
-  - psql -c 'create database sealas;' -U postgres
+  - psql -c "create role sealas with login password 'sealas';" -U postgres
+  - psql -c 'create database sealas with owner sealas;' -U postgres
   - yarn
   - mix deps.get
   - mix local.hex --force
