--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,25 +1,29 @@
 services:
   - postgresql96
 
-before_test:
-environment:
-  PGUSER: postgres
-  PGPASSWORD: Password12!
+cache:
+  - C:\ProgramData\chocolatey
+  - C:\tools\mingw64
 
 install:
   - cinst elixir
   - cinst mingw
   - SET PATH=C:\ProgramData\chocolatey\lib\Elixir\bin;C:\tools\mingw64\bin;%PATH%
-  - PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
-  - PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
-  - psql -c "create role sealas with login password 'sealas';" -U postgres
-  - psql -c 'create database sealas with owner sealas;' -U postgres
+  - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
   - yarn
-  - mix deps.get
   - mix local.hex --force
   - mix local.rebar --force
 
 build_script:
-  - yarn run mdlint
+  - mix deps.get
   - mix compile
+
+before_test:
+  - SET PGUSER=postgres
+  - SET PGPASSWORD='Password12!'
+  - psql -c "create role sealas with login password 'sealas';"
+  - psql -c 'create database sealas with owner sealas;'
+
+test_script:
+  - yarn run mdlint
   - mix test
