--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,26 +5,27 @@ services:
 cache:
   - C:\ProgramData\chocolatey
   - C:\tools\mingw64
+init:
+  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - SET PATH=C:\ProgramData\chocolatey\lib\Elixir\bin;C:\tools\mingw64\bin;%PATH%
+  - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
+  - SET PGUSER=postgres
+  - SET PGPASSWORD=Password12!
 
 install:
   - cinst elixir
   - cinst mingw
-  - SET PATH=C:\ProgramData\chocolatey\lib\Elixir\bin;C:\tools\mingw64\bin;%PATH%
-  - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
   - yarn
   - mix local.hex --force
   - mix local.rebar --force
-  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
 
 build_script:
   - mix deps.get
   - mix compile
 
 before_test:
-  - SET PGUSER=postgres
-  - SET PGPASSWORD='Password12!'
-  - psql -c "create role sealas with login password 'sealas';"
-  - psql -c 'create database sealas with owner sealas;'
+  - psql -c "create role sealas with login password 'sealas';" -U postgres
+  - psql -c "create database sealas with owner sealas;" -U postgres
 
 test_script:
   - yarn run mdlint
