--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
     "markdownlint-cli": "^0.3.1"
   },
   "scripts": {
-    "mdlint": "markdownlint *.md apps/*/*.md"
+    "mdlint": "find *.md apps/ -name '*.md' | xargs  -t markdownlint"
   }
 }
