--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "markdownlint-cli": "^0.3.1"
   },
   "scripts": {
-    "mdlint": "markdownlint *.md apps/*/*.md"
+    "mdlint": "grunt markdownlint"
   },
   "dependencies": {
     "grunt": "^1.0.1",
-    "grunt-mdlint": "^0.0.1"
+    "grunt-markdownlint": "^1.0.42"
   }
 }
