--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ node_js:
 
 cache:
   - yarn
+  directories:
+      - _build
+      - deps
 before_script:
   - psql -c "create role sealas with login password 'sealas';" -U postgres
   - psql -c 'create database sealas with owner sealas;' -U postgres
