--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ node_js:
   - '6'
 
 cache:
-  - yarn
   directories:
-      - _build
-      - deps
+    - node_modules
+    - _build
+    - deps
 before_script:
   - psql -c "create role sealas with login password 'sealas';" -U postgres
   - psql -c 'create database sealas with owner sealas;' -U postgres
@@ -21,4 +21,5 @@ before_script:
 
 script:
   - yarn run mdlint
+  - mix dialyzer
   - mix test
