--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,15 @@ services:
 node_js:
   - '6'
 
+env:
+  - MIX_HOME=`readlink -f _mix_ci`
+
 cache:
   directories:
     - node_modules
     - _build
     - deps
+    - _mix_ci
 before_script:
   - psql -c "create role sealas with login password 'sealas';" -U postgres
   - psql -c 'create database sealas with owner sealas;' -U postgres
