--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,13 +9,14 @@ cache:
   - _build
   - deps
   - node_modules
+  - _mix_ci
 init:
   - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
   - SET PATH=C:\ProgramData\chocolatey\lib\Elixir\bin;C:\tools\mingw64\bin;%PATH%
   - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
   - SET PGUSER=postgres
   - SET PGPASSWORD=Password12!
-
+  - SET MIX_HOME=%APPVEYOR_BUILD_FOLDER%\_mix_ci
 install:
   - cinst elixir
   - cinst mingw
