--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,9 @@ before_script:
   - psql -c "create role sealas with login password 'sealas';" -U postgres
   - psql -c 'create database sealas with owner sealas;' -U postgres
   - yarn
-  - mix deps.get
-  - mix local.hex --force
-  - mix local.rebar --force
+  - make mix-tools
+  - make mix-prepare
 
 script:
   - yarn run mdlint
-  - mix test
+  - make mix-test
