ci: skip travis install step
because it our mix tasks expect the secrets config in place, and travis
doesn't have that.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ services:
 node_js:
   - '6'
 
+# skip Travis CI's install step
+# because it executes `mix local.rebar --force`
+# but that requires that our secrets config file exists
+# which is the sole reason we wrote a Makefile to begin with
+install: true
 cache:
   - yarn
 before_script:
