--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-image: Visual Studio 2017
+image: Visual Studio 2015
 services:
   - postgresql96
 
@@ -6,7 +6,7 @@ cache:
   - C:\ProgramData\chocolatey
   - C:\tools\mingw64
 init:
-  - call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\amd64\vcvars64.bat"
   - SET PATH=C:\ProgramData\chocolatey\lib\Elixir\bin;C:\tools\mingw64\bin;%PATH%
   - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
   - SET PGUSER=postgres
