ci: added inchci automated doc checking

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,7 @@ before_script:
 script:
   - yarn run mdlint
   - make mix-test
+
+after_script:
+  - MIX_ENV=docs mix deps.get
+  - MIX_ENV=docs mix inch.report
