--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,6 @@ init:
   - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
   - SET PGUSER=postgres
   - SET PGPASSWORD=Password12!
-  - SET MIX_HOME=%APPVEYOR_BUILD_FOLDER%\_mix_ci
 install:
   - cinst erlang --version 20.0
   - cinst elixir
@@ -35,3 +34,4 @@ before_test:
 test_script:
   - yarn run mdlint
   - nmake mix-test
+  - name mix-dialyzer
