--- a/appveyor.yml
+++ b/appveyor.yml
@@ -11,7 +11,7 @@ cache:
   - _mix_ci
 init:
   - call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
-  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
+  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
   - SET PATH=C:\ProgramData\chocolatey\lib\Elixir\bin;%PATH%
   - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
   - SET PGUSER=postgres
@@ -23,6 +23,7 @@ install:
   - nmake mix-tools
 
 build_script:
+  - cmd: 'cmd /K "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64'
   - nmake mix-prepare
 
 before_test:
