--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,21 +16,25 @@ init:
   - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
   - SET PGUSER=postgres
   - SET PGPASSWORD=Password12!
+  - cmd: 'cmd /K "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64'
 install:
-  - cinst erlang --version 20.0
-  - cinst elixir
-  - yarn
-  - nmake mix-tools
+- cmd: >-
+    cinst erlang --version 20.0
+    cinst elixir
+    yarn
+    nmake mix-tools
 
 build_script:
-  - cmd: 'cmd /K "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64'
-  - cmd: nmake mix-prepare
+- cmd: >-
+    nmake mix-prepare
 
 before_test:
-  - psql -c "create role sealas with login password 'sealas';" -U postgres
-  - psql -c "create database sealas with owner sealas;" -U postgres
+- cmd: >-
+    psql -c "create role sealas with login password 'sealas';" -U postgres
+    psql -c "create database sealas with owner sealas;" -U postgres
 
 test_script:
-  - yarn run mdlint
-  - nmake mix-test
-  - name mix-dialyzer
+- cmd: >-
+    yarn run mdlint
+    nmake mix-test
+    name mix-dialyzer
