--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,25 +16,20 @@ init:
   - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
   - SET PGUSER=postgres
   - SET PGPASSWORD=Password12!
-  - cmd: 'cmd /K "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64'
 install:
-- cmd: >-
-    cinst erlang --version 20.0
-    cinst elixir
-    yarn
-    nmake mix-tools
+  - cinst erlang --version 20.0
+  - cinst elixir
+  - yarn
+  - nmake mix-tools
 
 build_script:
-- cmd: >-
-    nmake mix-prepare
+  - nmake mix-prepare
 
 before_test:
-- cmd: >-
-    psql -c "create role sealas with login password 'sealas';" -U postgres
-    psql -c "create database sealas with owner sealas;" -U postgres
+  - psql -c "create role sealas with login password 'sealas';" -U postgres
+  - psql -c "create database sealas with owner sealas;" -U postgres
 
 test_script:
-- cmd: >-
-    yarn run mdlint
-    nmake mix-test
-    name mix-dialyzer
+  - yarn run mdlint
+  - nmake mix-test
+  - name mix-dialyzer
