--- a/appveyor.yml
+++ b/appveyor.yml
@@ -17,12 +17,14 @@ init:
   - SET PGUSER=postgres
   - SET PGPASSWORD=Password12!
 install:
+  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
   - cinst erlang --version 20.0
   - cinst elixir
   - yarn
   - nmake mix-tools
 
 build_script:
+  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
   - nmake mix-prepare
 
 before_test:
@@ -30,6 +32,7 @@ before_test:
   - psql -c "create database sealas with owner sealas;" -U postgres
 
 test_script:
+  - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" amd64
   - yarn run mdlint
   - nmake mix-test
   - file _build\test\lib\argon2_elixir\priv\argon2_nif.dll
