--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,14 +12,16 @@ cache:
 init:
   - call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
+  - SET PATH=%PATH:C:\Program Files\erl8.3\bin\erl\;=%
   - SET PATH=C:\ProgramData\chocolatey\lib\Elixir\bin;%PATH%
   - SET PATH=C:\Program Files\PostgreSQL\9.6\bin\;%PATH%
+  - SET PATH=C:\Program Files\erl9.0\bin\erl\;%PATH%
   - SET PGUSER=postgres
   - SET PGPASSWORD=Password12!
 install:
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
   - which erl
-  - cinst erlang --version 20.0
+  #- cinst erlang --version 20.0
   - cinst elixir
   - which erl
   - yarn
@@ -29,8 +31,6 @@ build_script:
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
   - which erl
   - nmake mix-prepare
-  - file deps\argon2_elixir\priv\argon2_nif.dll
-  - file "c:\program files/erl9.0/erts-9.0/bin/erl.exe"
 
 before_test:
   - psql -c "create role sealas with login password 'sealas';" -U postgres
@@ -39,9 +39,6 @@ before_test:
 test_script:
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
   - yarn run mdlint
-  - file deps\argon2_elixir\priv\argon2_nif.dll
-  - file "c:\program files/erl9.0/erts-9.0/bin/erl.exe"
   #- nmake mix-test
   - mix test
-  - file deps\argon2_elixir\priv\argon2_nif.dll
   #- name mix-dialyzer
