--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ cache:
   - deps
   - node_modules
   - _mix_ci
+  - ~/.mix
 init:
   - call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
   - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
